# tools.nes

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: ci.yml
crates/nasm/: Cargo.toml  README.md
crates/nasm/src/: main.rs
crates/ncount/: Cargo.toml
crates/ngrep/: Cargo.toml
crates/readrom/: Cargo.toml  README.md
crates/readrom/src/: main.rs
crates/runrom/: Cargo.toml
crates/runrom/src/: main.rs
crates/xa65/: Cargo.toml
crates/xa65/src/: main.rs
lib/header/: Cargo.toml
lib/header/fuzz/: Cargo.toml
lib/header/fuzz/fuzz_targets/: fuzz_target_header.rs
lib/header/src/: lib.rs
lib/vnf/: Cargo.toml
lib/vnf/src/: instruction.rs  lib.rs
lib/xixanta/: Cargo.toml
lib/xixanta/fuzz/: Cargo.toml
lib/xixanta/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs  fuzz_target_assembler.rs  fuzz_target_parser.rs
lib/xixanta/src/: assembler.rs  cfg.rs  context.rs  errors.rs  instruction.rs  lib.rs  mapping.rs  node.rs  object.rs  opcodes.rs  parser.rs
lib/xixanta/src/mappings/: empty.cfg  empty.toml  mmc1.cfg  nrom.cfg  nrom.toml  nrom65.cfg  nrom65.toml  unrom.cfg  unrom.toml
scripts/: full-test.sh  fuzz.sh  test-e2e.sh
tests/: asan_reserve_constant.s  avoid_bad_macro.s  bad_fallthrough.s  bad_jal.s  bare_accesses.s  def.s  defines.s  delayed_macro_arguments.s  fallthrough.s  fixed-segments.s  indirect.s  jal.s  unrom.s  unused.s  unused_definition.s  unused_macro_arg.s  variable_names.s
tests/assets/: basic.chr  diskun.chr
tests/expected/: asan_reserve_constant.txt  avoid_bad_macro.nes  bad_fallthrough.txt  bad_jal.txt  bare_accesses.txt  defines-one.nes  defines-undefined.nes  delayed_macro_arguments.nes  fallthrough.nes  fixed-segments.nes  fixed-segments.txt  indirect.nes  unrom.txt  unused-warning.txt  unused.nes  unused_definition.txt  unused_macro_arg.nes  unused_macro_arg.txt  variable_names.txt
tests/expected/readrom/: a3b2-address.txt  header.txt  jetpac-full-nmi.txt
tests/runrom/: arithlog.nes  arithlog.s
tests/src/: chr-ram.s  sprite.s
tests/src/flicker/: flicker.s
tests/src/shared/: diskun.s  joypad.s
