[workspace]
members = ["lib/*", "crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.82"
edition = "2021"
license = "GPLv3+"
authors = ["Miquel Sabaté Solà <mikisabate@gmail.com>"]

[workspace.dependencies]
xixanta = { path = "./lib/xixanta", version = "0.1.0" }
header = { path = "./lib/header", version = "0.1.0" }

[profile.release]
codegen-units = 1
lto = true
