[package]
name = "xixanta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]
members = []

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.xixanta]
path = ".."

[[bin]]
name = "fuzz_target_parser"
path = "fuzz_targets/fuzz_target_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_assembler"
path = "fuzz_targets/fuzz_target_assembler.rs"
test = false
doc = false
bench = false
